2015-01-18  Dirk Eddelbuettel  <edd@debian.org>

2015-01-18  Mike Birdgeneau  <mike.birdgeneau@gmail.com>

	* R/pushes.R (pbPost): Support for channels

	* tests/simpleTests.R: Added tests for channels

2014-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: A few minor edits

2014-12-29  Mike Birdgeneau  <mike.birdgeneau@gmail.com>

	* R/pushes.R: Corrections to file transfer mode

	* tests/simpleTests.R: Added more tests

2014-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* DESCRIPTION: Updated the text in Description:

2014-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Correct file upload method

	* R/init.R: Protect filename by spaces

2014-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0

2014-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* man/rpushbullet-package.Rd: Added a new section on intialization
	detailing how api key, device key(s) and name(s) and defaultdevice
	can be specified via a dotfile, options or function arguments.

	* R/pushes.R: Minor correction

2014-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: New (optional) argument 'email' in pbPost
	* man/pbPost.Rd: Corresponding manual page updates

2014-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Minor typo correction by Mike Birdgeneau

	* R/pushes.R: Made file operations silent, minor tweak to docs
	* R/init.R: Made file operations silent

	* R/init.R: Also set 'names' option from init file

	* tests/simpleTests.R: Added two examples for type='link'
	and type='file'

2014-09-10  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Documentation clarified for 'recipient' option

2014-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Applied pull request #7 by Mike Birdgeneau which
	implements pushes of type 'file'
	* R/init.R: Ditto

	* R/pushes: Minor postprocessing of pull request
	* R/init.R: Ditto

2014-06-10  Dirk Eddelbuettel  <edd@debian.org>
